hphp/hack/test/typecheck/wildcard/wildcard_invalid2.php.exp
File "wildcard_invalid2.php", line 10, characters 25-25:
Wildcard typehints are not allowed in this position (Naming[2084])
File "wildcard_invalid2.php", line 10, characters 16-27:
Invalid "is" expression hint (Typing[4195])
  File "wildcard_invalid2.php", line 10, characters 20-26:
  The "is" operator cannot be used with a type with generics, because generics are erased at runtime
File "wildcard_invalid2.php", line 14, characters 16-16:
Wildcard typehints are not allowed in this position (Naming[2084])
